# multiboot

./: CMakeLists.txt
include/: common.h  mb_common.h  mb_fs_redirection.h  mb_fstab_patcher.h  mb_vold.h  modules.h  util.h
include/lib/: cmdline.h  fs.h  fs_mgr.h  klog.h  uevent.h
lib/: klog.c  uevent.c
lib/fs/: fs.c
lib/fs/fstypes/: ext2.c
lib/fs_mgr/: fs_mgr.c  fs_mgr_priv.h
lib/libblkid/: CMakeLists.txt  CMakeLists.txt~  bitops.h  blkid.h  fileutils.c
lib/libblkid/src/: bitops.h
prebuilt/: check_sdcard_context.sh
src/: common.c  mb_common.c  mb_fs_redirection.c  mb_fstab_patcher.c  mb_vold.c  modules.c  multiboot.c  multiboot_init.c  util.c
src/lib/: cmdline.c  klog.c
src/lib/fs_mgr/: fs_mgr.c  fs_mgr_priv.h
src/modules/: env_prepare.c  fs_redirection.c  fstab_patcher.c
